# autolight

./: COMONADS.md  ComonadAccelerate.hs  ComonadMassiv.hs  ComonadRepa.hs  ComonadVector.hs  ImgComonad.hs  Main.hs  Matrix.hs  MatrixAccelerate.hs  MatrixComonad.hs  MatrixLoad.hs  MatrixMassiv.hs  MatrixRepa.hs  MatrixVector.hs  README.md  Shape.hs  StencilsAccelerate.hs  StencilsMassiv.hs  StencilsRepa.hs  StencilsVector.hs  autolight.cabal  cabal.project.local  stack.yaml
