cabal-version:       >=1.10

name:                autolight
version:             0.1.0.0
-- synopsis:
-- description:
-- license-file:
author:              Lucas Ieks
maintainer:          lieks124@gmail.com
build-type:          Simple

executable coautolight
  main-is:             Main.hs
  other-modules:       MatrixComonad
  build-depends:       base < 4.15, comonad, JuicyPixels, mtl, repa, vector, criterion
  default-language:    Haskell2010
  ghc-options:         -O2 -fllvm -threaded
